# executorch

./: CMakeLists.txt  CMakePresets.json  Package.swift
docs/: maccatalyst.md
extension/apple/: CMakeLists.txt
scripts/: build_apple_frameworks.sh  create_frameworks.sh
tools/cmake/: resolve_buck.py
tools/cmake/preset/: apple_common.cmake
